# ytm-player

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
aur/: .SRCINFO  PKGBUILD
macos/: install.sh
macos/YtmMediaBridge.app/Contents/: Info.plist
macos/YtmMediaBridge.app/Contents/MacOS/: ytm-media-bridge  ytm-media-bridge.swift
src/ytm_player/: __init__.py  app.py  cli.py  ipc.py
src/ytm_player/app/: _app.py  _ipc.py  _keys.py  _mpris.py  _session.py  _sidebar.py  _track_actions.py
src/ytm_player/config/: keymap.py  settings.py
src/ytm_player/services/: auth.py  macos_audio_route.py  macos_eventtap.py  macos_media.py  player.py  playlist_cache.py  spotify_import.py  yt_dlp_options.py  ytmusic.py
src/ytm_player/ui/: header_bar.py  playback_bar.py  theme.py
src/ytm_player/ui/pages/: browse.py  context.py  library.py  liked_songs.py  queue.py  recently_played.py  search.py
src/ytm_player/ui/popups/: actions.py
src/ytm_player/ui/sidebars/: lyrics_sidebar.py  playlist_sidebar.py
src/ytm_player/ui/widgets/: album_art.py  progress_bar.py  track_table.py
src/ytm_player/utils/: bidi.py  transliteration.py
tests/test_config/: test_settings_extended.py
tests/test_services/: test_auth_cookies_file.py  test_ipc.py  test_macos_eventtap.py  test_progressive_loading.py
tests/test_ui/: test_actions_popup.py
tests/test_utils/: test_bidi.py  test_transliteration.py
