[project]
name = "ytm-player"
version = "1.5.2"
description = "A full-featured YouTube Music TUI client for the terminal"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "MIT"
authors = [{ name = "Peter", email = "peternaame@gmail.com" }]
keywords = ["youtube-music", "tui", "music-player", "terminal", "textual", "mpv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "textual>=7.0,<8.0",
    "ytmusicapi>=1.11.0",
    "yt-dlp>=2025.1.0",
    "python-mpv>=1.0.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
    "Pillow>=10.0",
    "pynput>=1.7.6; sys_platform == 'win32'",
    "pyobjc-framework-MediaPlayer>=11.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=11.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
spotify = [
    "spotipy>=2.24.0",
    "spotifyscraper>=2.0.0",
    "thefuzz>=0.22.0",
]
mpris = [
    "dbus-next>=0.2.3",
]
images = []
discord = [
    "pypresence>=4.3.0",
]
lastfm = [
    "pylast>=5.0.0",
]
transliteration = [
    "anyascii>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/peternaame-boop/ytm-player"
Repository = "https://github.com/peternaame-boop/ytm-player"
"Bug Tracker" = "https://github.com/peternaame-boop/ytm-player/issues"
"AUR Package" = "https://aur.archlinux.org/packages/ytm-player-git"
"Gentoo Package" = "https://gitweb.gentoo.org/repo/proj/guru.git/tree/media-sound/ytm-player"
Changelog = "https://github.com/peternaame-boop/ytm-player/blob/master/CHANGELOG.md"

[project.scripts]
ytm = "ytm_player.cli:main"

[tool.poetry]
packages = [{ include = "ytm_player", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.24"
pytest-cov = "*"
ruff = "*"
anyascii = ">=0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/ytm_player/services/mpris.py" = ["N802", "N803", "F821", "F722"]
"src/ytm_player/ui/popups/spotify_import.py" = ["N803"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ytm_player"]

[tool.coverage.report]
fail_under = 10
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
omit = [
    "src/ytm_player/ui/*",
    "src/ytm_player/__main__.py",
]
